--- a/style.css
+++ b/style.css
@@ -3,24 +3,45 @@
 }
 
 #header-container {
-  background-color: rgb(58, 79, 26);
   height: 8vh;
 }
 
 #main-container {
   background-color: rgb(48, 83, 83);
   min-height: calc(100vh - 13vh);
+  background-size: cover;
+  background-position: center;
 }
 
 #footer-container {
-  background-color: blueviolet;
   height: 5vh;
-}
-
-.card {
-  width: 65rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #wrapper {
   padding: 0;
+}
+
+#weather-container {
+  width: 100%;
+}
+
+#additional-info {
+  margin-top: 3.25em;
+  font-size: 1.1em;
+  margin-left: 1em;
+}
+
+#current-temp {
+  font-size: 5em;
+}
+
+#skies {
+  margin: 0;
+}
+
+.card {
+  width: 45rem;
 }
